# cppTemplate

./: .clang-format  .clang-tidy  .gitignore  .pshell_info  CMakeLists.txt
cmake/: Testing.cmake  conanHelpers.cmake
scripts/: bootstrap.cmd  makeenv.cmd
src/: CMakeLists.txt  main.cpp  test1.cpp
